data_model/derive/tests/ui_fail/transparent_api_private_field.stderr
error[E0616]: field `signatory` of struct `iroha_data_model::account::AccountId` is private
 --> tests/ui_fail/transparent_api_private_field.rs:6:35
  |
6 |     println!("ID: {}", account_id.signatory);
  |                                   ^^^^^^^^^ private field
  |
help: a method `signatory` also exists, call it with parentheses
  |
6 |     println!("ID: {}", account_id.signatory());
  |                                            ++
